# NBA-Player-Prop-Analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_environment.py  test_basketball_analyst.py
.github/workflows/: ci.yml  python-app.yml
utils/: AI_MODELS_README.md  API_INTEGRATION_README.md  DATA_PIPELINE_README.md  DATA_VALIDATION_README.md  EXPERIMENT_TRACKING_README.md  FEATURE_ENGINEERING_README.md  MODEL_DEPLOYMENT_README.md  MONITORING_README.md  README.md  STATISTICAL_ANALYSIS_README.md  VISUALIZATIONS_README.md  ai_models.py  api_integration.py  config_manager.py  data_pipeline.py  data_processor.py  data_validation.py  error_handler.py  experiment_tracking.py  feature_engineering.py  logger.py  model_deployment.py  monitoring.py  statistical_analysis.py  visualizations.py
